[package]
name = "actix-web-flash"
version = "0.3.1"
authors = ["Hans Ole Hatzel <hhatzel@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
description = "Flash messages for actix-web"

documentation = "https://docs.rs/actix-web-flash/latest/actix_web_flash/"
homepage = "https://github.com/hatzel/actix-web-flash"
repository = "https://github.com/hatzel/actix-web-flash"

[dependencies]
actix-web = "1"
actix-service = "0.4"
actix-http = "0.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
futures = "0.1"

[dev-dependencies]
time = "0.1"
actix-files = "0.1"
actix-http-test = "0.2"
